Added js functionality for journal entries with data provider, list and card files.

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,10 +27,9 @@ header {
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
-
 }
 
-.submit {
+.entry__button {
 	display: flex;
 	padding-top: 2em;
 	padding-bottom: 2em;
